# cognilex-backend

./: .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backend-tests.yml  deploy.yml
config/: R2_config.py  cognilex_db.py  jwt.py
controllers/: admin_Controller.py  appointment_Controller.py  chat_controller.py  feedback_Controller.py  lawyerDashboard_Controller.py  lawyer_Controller.py  message_Controller.py  user_controller.py
models/: admin.py  appointment.py  case.py  chat.py  feedback.py  lawyer.py  message.py  user.py
routes/: admin_route.py  appointment_route.py  chat_route.py  feedback_route.py  lawyerDashboard_route.py  lawyer_route.py  message_route.py  rag_route.py  user_route.py
tests/: test_admin_routes.py  test_appointment_routes.py  test_chat_routes.py  test_feedback_routes.py  test_lawyerDashboard_routes.py  test_lawyer_routes.py  test_message_routes.py  test_user_routes.py
