[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognilex-backend"
version = "1.0.0"
description = "CogniLex Backend - Legal AI Assistant Platform"
requires-python = ">=3.10"

[tool.ruff]
# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".github",
    "uploads",
]

# Line length for code formatting
line-length = 160

# Target Python version
target-version = "py310"

[tool.ruff.lint]
# Selected rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
]

# Ignored rules
# The codebase uses FastAPI dependency defaults, camelCase API fields, and
# legacy controller patterns that intentionally conflict with Ruff's stricter
# defaults. Keep the checks focused on issues that are actionable for this repo.
ignore = [
    "B008",  # FastAPI Depends/File/Body defaults in route signatures
    "B025",  # Legacy try/except patterns in analytics helpers
    "B904",  # Existing exception handling style across controllers/routes
    "C901",  # Large request handlers and analytics functions
    "E402",  # Script/config modules with runtime imports after env loading
    "E501",  # Long JSON-like payloads and test assertions
    "E701",  # Legacy one-line control flow in a few modules
    "E722",  # Legacy bare except handling in a few helpers
    "F811",  # Duplicate test helper dataclasses
    "F841",  # Unused locals in legacy helper code
    "N803",  # Public API argument names mirror frontend payloads
    "N815",  # Public model fields mirror frontend payloads
]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# McCabe complexity threshold
max-complexity = 10

[tool.pytest.ini_options]
# Pytest configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests",
    "routes: Route/endpoint tests",
    "slow: Slow running tests",
    "admin: Admin-related tests",
    "user: User-related tests",
    "lawyer: Lawyer-related tests",
    "appointment: Appointment-related tests",
    "chat: Chat-related tests",
    "feedback: Feedback-related tests",
    "message: Message-related tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

